# stm32_cubemx_servo

./: .gitmodules  CMakeLists.txt  Makefile  devcontainer-stm32-cubemx-servo.ioc
Core/Inc/: main.h  stm32l4xx_hal_conf.h
Core/Src/: gpio.c  main.c  stm32l4xx_hal_msp.c  usart.c
app/: CMakeLists.txt
app/main/: CMakeLists.txt  main.cpp
app/servo/: CMakeLists.txt  servo.c  servo.cpp  servo.h  servo.hpp  servo_config.h
app/utility/: utility.hpp
cmake/stm32cubemx/: CMakeLists.txt
