add_library(servo STATIC)

target_sources(servo PRIVATE 
    "servo.c"
)

target_include_directories(servo PUBLIC 
)

target_link_libraries(servo PRIVATE
)

target_compile_options(servo PUBLIC
    -std=c23
    -Wall
    -Wextra
    -Wconversion
    -Wshadow
    -Wpedantic
    -Wnarrowing
    -Waddress
    -pedantic
    -Wdeprecated
    -Wsign-conversion
    -Wduplicated-cond
    -Wduplicated-branches
    -Wlogical-op
    -Wnull-dereference
    -Wdouble-promotion
    -Wimplicit-fallthrough
    -Wcast-align
)
